Pull request: AG-8041 Fix asymmetry of text and buttons about the vertical axis of symmetry
Merge in EXTENSIONS/safari-app-extension from fix/AG-8041 to master

Squashed commit of the following:

commit 5b47df09c41a8ec3913c9fa5cccebe860e8590da [formerly b272e9fc1c5b7c7e21f15ea532d6e31c84840830]
Merge: 4b3bd8db 2a982c21
Author: tvinzz <o.labudko@adguard.com>
Date:   Wed May 19 23:34:30 2021 +0200

    Merge branch 'master' into fix/AG-8041

commit fe0f37cc046d0c3e1a3193ecc1f8a70564f69384 [formerly 4b3bd8db1478b61a7cf5e2d6001b2ebff03486b9]
Author: tvinzz <o.labudko@adguard.com>
Date:   Tue May 11 17:34:21 2021 +0200

    fixed margin


Former-commit-id: 94f6232d8dd6253c66929a440435078ccfe73e7e

--- a/ElectronMainApp/src/main/ui/css/style.css
+++ b/ElectronMainApp/src/main/ui/css/style.css
@@ -1668,7 +1668,7 @@ li.active .toggler:before {
   font-size: 36px;
   line-height: 33px;
   max-width: 540px;
-  margin-bottom: 35px;
+  margin: 0 auto 35px;
 }
 
 .onboarding__desc {
